--- a/app/assets/components/ui-elements/oj-paper-collection.html
+++ b/app/assets/components/ui-elements/oj-paper-collection.html
@@ -37,8 +37,7 @@
     Polymer({
 
       selectPaper: function(e){
-          var url = '/review/'+ e.detail.data.sha;
-          this.fire('go', url);
+          this.fire('review', e.detail.data);
       },
 
       filtered: function(array, key, desc) {
