--- a/app/assets/components/subpages/oj-submit-page.html
+++ b/app/assets/components/subpages/oj-submit-page.html
@@ -56,7 +56,7 @@
 
       submit:function(){
         if (this.paperValid)
-            this.fire('go', '/papers/' + this.paperTypedId + '/preview');
+            this.fire('go', '/submit/' + this.paperTypedId);
       }
 
     })
