[#205] Most of the polymer code should be updated

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -23,7 +23,7 @@
               </div>
           </template>
 
-          <stacked-pdf-reader src={{paper.location}}
+          <stacked-pdf-reader src={{paper.document_location}}
                               annotations={{annotations}}
                               pageOffset={{pageOffset}}
                               loadProgress={{loadProgress}}
