[#205] Cleaned up some remaining issues

--- a/app/assets/components/mixins/oj-paper-helpers.html
+++ b/app/assets/components/mixins/oj-paper-helpers.html
@@ -64,6 +64,10 @@
             }
 
             return paper.assignmentsBySha[assignment_sha];
+        },
+
+        providerPart: function(typed_provider_id) {
+            return typed_provider_id.split(':').pop();
         }
 
     };
