--- a/app/assets/components/mixins/oj-url-helpers.html
+++ b/app/assets/components/mixins/oj-url-helpers.html
@@ -22,7 +22,11 @@
         },
 
         getIssuesPath: function(paper) {
-            return "/api/papers/"+paper.typed_provider_id+"/issues";
+            return "/api/papers/"+paper.typed_provider_id+"/annotations";
+        },
+
+        getAllIssuesPath: function(paper) {
+            return "/api/papers/"+paper.typed_provider_id+"/annotations/all";
         },
 
         previewPath: function(paper) {
