--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -63,8 +63,9 @@
           this.$.pages.go('/');
       },
 
-      onReview: function(event, paper) {
-          var url = '/review/' + paper.typed_provider_id;
+      onReview: function(event, paper_or_id) {
+          var id = paper.typed_provider_id || paper_or_id;
+          var url = '/review/' + id;
           this.$.pages.go(url);
       },
 
