--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -115,7 +115,7 @@
           switch (role) {
               case 'editor':   return 'editing';
               case 'reviewer': return 'review';
-              default:         return 'papers';
+              default:         return 'submitted';
           }
       },
       pdfClientChanged: function(event, detail) {
