--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -11,6 +11,7 @@
  *= require core-item/core-item
  *= require core-icon/core-icon
  *= require core-list/core-list
+ *= require core-input/core-input
  *= require core-menu/core-menu
 
  *= require paper-toast/paper-toast
