--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -1,10 +1,11 @@
-<polymer-element name="oj-app" id="oj-app">
+<polymer-element name="oj-app"
+                 id="oj-app"
+                 on-notification={{onNotification}}
+                 on-go={{onGo}}
+                 on-go-default={{onGoDefault}}
+                 on-review={{onReview}}>
   <template>
-    <core-scaffold id='scaffold'
-                   on-notification={{onNotification}}
-                   on-go={{onGo}}
-                   on-go-default={{onGoDefault}}
-                   on-review={{onReview}}>
+    <core-scaffold id='scaffold'>
       <nav>
         <core-toolbar>
           <span class="title">The Open Journal</span>
@@ -16,6 +17,10 @@
 
       <core-toolbar tool flex>
         <div flex></div>
+        <core-icon id=search-icon icon=search></core-icon>
+        <input id=search is="core-input" placeholder="Search"
+                         on-keyup={{onSearchKeyUp}}
+                >
         <oj-user-login currentUser={{currentUser}}></oj-user-login>
       </core-toolbar>
 
@@ -43,6 +48,35 @@
         outline: none;
         z-index: 24;
         box-sizing: border-box;
+      }
+
+      #search {
+          background: #6c7ee2;
+          border: solid 1px white;
+          border-radius: 32px;
+          color: white;
+          font-size: 16px;
+          padding-left: 16px;
+          padding-top: 4px;
+          padding-bottom: 4px;
+      }
+      ::-webkit-input-placeholder {
+          color: silver;
+      }
+      :-moz-placeholder { /* Firefox 18- */
+          color: silver;
+      }
+      ::-moz-placeholder {  /* Firefox 19+ */
+          color: silver;
+      }
+      :-ms-input-placeholder {
+          color: silver;
+      }
+
+      #search-icon {
+          position: relative;
+          left:     340px;
+          top:      1px;
       }
 
     </style>
@@ -80,6 +114,16 @@
       onRouteChanged: function(event, detail) {
           var $menu = this.shadowRoot.querySelector('#mainmenu');
           $menu.routeChanged(detail);
+      },
+
+      onSearchKeyUp: function(event) {
+          if (event.keyCode==13) {
+              event.preventDefault();
+              var value = this.$.search.value;
+              value = value && $.trim(value);
+              if (value)
+                this.fire('go', '/search?q=' + encodeURIComponent(value) );
+          }
       },
 
       showNotification: function(text) {
