--- a/app/assets/components/ui-elements/oj-paper-collection.html
+++ b/app/assets/components/ui-elements/oj-paper-collection.html
@@ -2,14 +2,24 @@
 
   <template>
     <div flex horizontal center-justified layout>
-      <paper-shadow >
-        <core-list on-core-activate={{selectPaper}} data="{{papers | filtered(sortKey, sortDesc) }}" >
-          <template>
-            <div class='item {{ {selected: selected} | tokenList }}'>
-              <oj-paper-row paper={{model}}></oj-paper-row>
-            </div>
+      <paper-shadow>
+
+        <template if="{{papers && papers.length>0}}">
+            <core-list on-core-activate={{selectPaper}} data="{{papers | filtered(sortKey, sortDesc) }}" >
+              <template>
+                <div class='item {{ {selected: selected} | tokenList }}'>
+                  <oj-paper-row paper={{model}}></oj-paper-row>
+                </div>
+              </template>
+            </core-list>
+        </template>
+
+          <template if="{{papers && papers.length==0}}">
+              <div id=empty>
+                There are no papers to view.
+              </div>
           </template>
-        </core-list>
+
       </paper-shadow>
     </div>
 
@@ -23,6 +33,11 @@
         width: 100%;
         height: 100%;
         min-height: 800px;
+      }
+      #empty {
+          font-weight: 500;
+          font-size: 18px;
+          padding: 20px 10px;
       }
       .item {
         border-bottom: 1px #efefef solid;
