--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -5,6 +5,8 @@
  *= require polymer/polymer
  *= require core-ajax/core-ajax
  *= require core-iconset-svg/core-iconset-svg
+ *= require core-header-panel/core-header-panel
+ *= require core-drawer-panel/core-drawer-panel
  *= require core-scaffold/core-scaffold
  *= require core-toolbar/core-toolbar
  *= require core-collapse/core-collapse
