--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
     <%= csrf_meta_tags %>
   </head>
-<body unresolved fullbleed>
+<body unresolved fullbleed layout vertical>
 
 <%= yield %>
 <%= render 'layouts/flash' %>
