--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -5,36 +5,63 @@
                  on-go-default={{onGoDefault}}
                  on-review={{onReview}}>
   <template>
-    <core-scaffold id='scaffold'>
-      <nav>
+
+    <core-header-panel border=true>
+
         <core-toolbar>
-          <span class="title">The Open Journal</span>
+            <div tool flex layout horizontal>
+                <core-icon-button icon="menu" on-tap={{toggleDrawer}} hidden?="{{!narrow}}"></core-icon-button>
+                <span flex class=title>The Open Journal</span>
+                <core-icon id=search-icon icon=search></core-icon>
+                <input id=search is="core-input"
+                       placeholder="Search"
+                       on-keyup={{onSearchKeyUp}}
+                        >
+                <oj-user-login currentUser={{currentUser}}></oj-user-login>
+            </div>
         </core-toolbar>
 
-        <oj-main-menu id=mainmenu currentUser={{currentUser}}></oj-main-menu>
+        <core-drawer-panel id=drawerPanel
+                           narrow={{narrow}}>
 
-      </nav>
+            <oj-main-menu drawer
+                    id=mainmenu
+                    currentUser={{currentUser}}>
+            </oj-main-menu>
 
-      <core-toolbar tool flex>
-        <div flex></div>
-        <core-icon id=search-icon icon=search></core-icon>
-        <input id=search is="core-input" placeholder="Search"
-                         on-keyup={{onSearchKeyUp}}
-                >
-        <oj-user-login currentUser={{currentUser}}></oj-user-login>
-      </core-toolbar>
+            <core-header-panel main mode=scroll layout vertical>
+                <oj-page-router id=pages
+                                flex layout vertical
+                                on-route-changed={{onRouteChanged}}
+                                currentUser={{currentUser}} >
+                    </oj-page-router>
+            </core-header-panel>
 
-      <oj-page-router id=pages
-                      on-route-changed={{onRouteChanged}}
-                      currentUser={{currentUser}}
-              ></oj-page-router>
+        </core-drawer-panel>
 
-      <paper-toast id=notification class="capsule core-transition core-transition-bottom" role="status" touch-action="none" tabindex="-1"></paper-toast>
+    </core-header-panel>
+
+    <paper-toast id=notification class="capsule core-transition core-transition-bottom" role="status" touch-action="none" tabindex="-1"></paper-toast>
 
     <style>
 
+      :host, core-header-panel {
+          height: 100%;
+      }
+
+      [drawer] {
+          border-right: 1px solid #ccc;
+      }
+
+      core-toolbar {
+          color: #fff;
+          font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+          background-color: rgb(51, 85, 117);
+      }
+
       .title {
         font-size: 25px;
+        white-space: nowrap;
       }
 
       :host /deep/ #mainContainer{
@@ -130,6 +157,10 @@
           console.info('Notification: ', text);
           this.$.notification.text = text;
           this.$.notification.show();
+      },
+
+      toggleDrawer: function() {
+          this.$.drawerPanel.toggle();
       }
 
     });
