--- a/app/assets/components/ui-elements/oj-paper-collection.html
+++ b/app/assets/components/ui-elements/oj-paper-collection.html
@@ -1,11 +1,11 @@
-<polymer-element name='oj-paper-collection' attributes="src sortKey sortDesc">
+<polymer-element name='oj-paper-collection' attributes="src sortKey sortDesc" relative>
 
   <template>
-    <div flex horizontal center-justified layout>
-      <paper-shadow>
+    <div layout vertical>
+      <paper-shadow fit>
 
         <template if="{{papers && papers.length>0}}">
-            <core-list on-core-activate={{selectPaper}} data="{{papers | filtered(sortKey, sortDesc) }}" >
+            <core-list fit on-core-activate={{selectPaper}} data="{{papers | filtered(sortKey, sortDesc) }}" >
               <template>
                 <div class='item {{ {selected: selected} | tokenList }}'>
                   <oj-paper-row paper={{model}}></oj-paper-row>
@@ -14,11 +14,11 @@
             </core-list>
         </template>
 
-          <template if="{{papers && papers.length==0}}">
-              <div id=empty>
+        <template if="{{papers && papers.length==0}}">
+            <div id=empty>
                 There are no papers to view.
-              </div>
-          </template>
+            </div>
+        </template>
 
       </paper-shadow>
     </div>
@@ -31,8 +31,6 @@
       }
       core-list{
         width: 100%;
-        height: 100%;
-        min-height: 800px;
       }
       #empty {
           font-weight: 500;
